# carbon2prom

./: Cargo.toml  LICENSE  README.md  config.yaml
lib/carbon/: Cargo.toml
lib/carbon/src/: lib.rs
lib/prom-remote-write/: Cargo.toml
lib/prom-remote-write/proto/: prometheus-remote.proto  prometheus-types.proto
lib/prom-remote-write/src/: lib.rs
src/: main.rs  settings.rs  util.rs
