[package]
name = "carbon2prom"
version = "0.1.0"
authors = ["Harold Dost <harolddost@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
log = "0.4"
tokio = { version = "1", features = ["rt-multi-thread","net","macros"]}
gotham = "0.5.0"
carbon = {path = "lib/carbon" }
prom-remote-write = {path = "lib/prom-remote-write" }
