[package]
name = "prom-remote-write"
version = "0.1.0"
authors = ["Harold Dost <github@hdost.com"]
edition = "2018"
publish = false
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "1.6.1"
nom = "6.0.1"
num_enum = "0.5.1"
prost = "0.6.1"
prost-types = "0.8.0"
reqwest = "~0.11.2"
snap = "1"

[build-dependencies]
prost-build = "0.6.1"

